--- a/applications/kappa/sun95.tex
+++ b/applications/kappa/sun95.tex
@@ -14651,8 +14651,8 @@ KAPPA: \htmlref{ARDGEN}{ARDGEN},
       device is empty (or if the CLEAR parameter is set TRUE) the
       outlines are drawn using a default projection - the size of the
       area plotted can be controlled by the SIZE parameter. Note, the
-      facility to plot on an empty device is currently only avaialble for
-      2-dimensional regions specified using parameter REGION.
+      facility to plot on an empty device is currently only available for
+      two-dimensional regions specified using parameter REGION.
    }
    \sstusage{
       ardplot ardfile [device] [regval]
@@ -14713,7 +14713,7 @@ KAPPA: \htmlref{ARDGEN}{ARDGEN},
          The size of the plot to create, given as a multiple of the size
          of the Region being plotted.  This parameter is only accessed if
          no DATA picture can be found on the graphics device, or CLEAR is
-         TRUE.  A SIZE value of 1.0 causes the plot to be the same size as
+         {\tt TRUE}.  A SIZE value of 1.0 causes the plot to be the same size as
          the Region being plotted.  A value of 2.0 causes the plot to be
          twice the size of the Region, \emph{etc}. {\tt [2.0]}
       }
