KAPPA: Correct usage in MAKESNR.
Parameter MINVAR in MAKESNR has a dynamic default.

--- a/applications/kappa/sun95.tex
+++ b/applications/kappa/sun95.tex
@@ -33523,7 +33523,7 @@ KAPPA: \htmlref{DISPLAY}{DISPLAY},
       set bad in the output NDF.
    }
    \sstusage{
-      makesnr in out minvar
+      makesnr in out [minvar]
    }
    \sstparameters{
       \sstsubsection{
