pubs: Clickable ASCL links

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -166,12 +166,14 @@ Starlink
 \newcommand{\procspie}{Proc.\ SPIE}
 \newcommand{\aspconf}{ASP Conf. Ser.}
 
+%% ASCL
+\newcommand{\ascl}[1]{\href{http://www.ascl.net/#1}{ascl:#1}}
 
 %% main text
 \section{Introduction}
 \label{sec:intro}
 
-The CLUMPFIND algorithm \citep[][ascl:1107.014]{1994Williams} has been widely used for
+The CLUMPFIND algorithm \citep[][\ascl{1107.014}]{1994Williams} has been widely used for
 decomposing 2- and 3-dimensional data into disjoint clumps of emission,
 each associated with a single significant peak. It is based upon an
 analysis of a set of evenly spaced contours derived from the data array
@@ -450,9 +452,9 @@ the spatial coverage of each clump.
 
 
 \section{\label{sec:cupid}CUPID - an Implementation of FellWalker}
-The Starlink CUPID package \citep[][ascl:1311.007]{CupidAdass,SUN255} provides
+The Starlink CUPID package \citep[][\ascl{1311.007}]{CupidAdass,SUN255} provides
 implementations of various clump-finding algorithms, including FellWalker
-and CLUMPFIND. In common with the rest of the Starlink software \citep[][ascl:1110.012]{StarlinkAdass},
+and CLUMPFIND. In common with the rest of the Starlink software \citep[][\ascl{1110.012}]{StarlinkAdass},
 the source code for the CUPID package is open-source and is available on github at
 \htmladdnormallink{https://github.com/Starlink}.
 
@@ -461,7 +463,7 @@ the source code for the CUPID package is open-source and is available on github 
 Include some references to earlier investigations? \citep[e.g.][]{2010Watson}
 
 May want to consider \citep{2012PASA...29..301W} which uses
-DUCHAMP \citep[][ascl:1201.011]{2012MNRAS.421.3242W}.
+DUCHAMP \citep[][\ascl{1201.011}]{2012MNRAS.421.3242W}.
 
 \subsection{Simulated Data}
 
