pubs: Use real citation for STC-S

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -443,8 +443,7 @@ outside the clump set to a special ``blank'' value.
 \end{description}
 
 There is also an optional column called ``Shape'' containing an STC-S
-description
-(\htmladdnormallink{http://www.ivoa.net/Documents/latest/STC-S.html}~) of
+description \citep{2007STCS,2010ASPC..434..213B} of
 the spatial coverage of each clump.
 
 \end{enumerate}
