--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -100,3 +100,24 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@Misc{2007STCS,
+  author =    {A. H. Rots},
+  title =     "{STC-S: Space-Time Coordinate (STC) Metadata Linear String Implementation}",
+  month =     dec,
+  year =      {2007},
+  url =       {http://www.ivoa.net/documents/latest/STC-S.html},
+}
+
+@INPROCEEDINGS{2010ASPC..434..213B,
+   author = {{Berry}, D. and {Draper}, P.},
+    title = "{Using the AST Library to Create and Use STC-S Region Descriptions}",
+booktitle = {Astronomical Data Analysis Software and Systems XIX},
+     year = 2010,
+   series = {\aspconf},
+   volume = 434,
+   editor = {{Mizumoto}, Y. and {Morita}, K.-I. and {Ohishi}, M.},
+    month = dec,
+    pages = {213},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ASPC..434..213B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
