pubs: Fix Watson 2010 URL
Now a permanent URL

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -63,7 +63,7 @@
   title =        {Assessing The Performance of Sub-Millimetre Compact Object Detection Algorithms},
   school =       {University of Hertfordshire},
   year =         {2010},
-  note =         {\url{http://www.star.herts.ac.uk/~mat/Mark_Watson_MSc_Thesis.pdf}},
+  url =          {http://hdl.handle.net/2299/13228}
 }
 
 @ARTICLE{2012PASA...29..301W,
